--- a/src/index.twig
+++ b/src/index.twig
@@ -44,11 +44,12 @@
 
         {% include 'organisms/services.twig' %}
 
-        {% include 'organisms/smile-gallery.twig' %}
-
-        {% include 'organisms/tour.twig' %}
 
         {% include 'organisms/forms.twig' %}
+
+        {% include 'molecules/slab__care-credit.twig' %}
+
+        <img src="/assets/group-photo.jpg" alt="{{ title }}" style="width: 100%">
 
         {% include 'organisms/location.twig' %}
 
