--- a/src/scss/molecules/_buttons.scss
+++ b/src/scss/molecules/_buttons.scss
@@ -2,20 +2,19 @@ a.btn,
 button.btn {
   font-family: $ff-lato;
   font-weight: 900 !important;
-  background-color: #30a3d3;
+  background-color: #9175eb;
   color: #fff;
   border-radius: 50px;
-  border: solid 3px #fff;
+  border: solid 2px #fff;
   padding: 12px 30px;
   text-transform: uppercase;
   letter-spacing: 1px;
   //box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.36);
-
-  @include font-size(17px, 16px, 16px, 15px, 15px);
+  font-size: 12px;
 
   &:hover,
   &:focus {
-    background-color: lighten(#30a3d3, 10%);
+    background-color: lighten(#9175eb, 10%);
     color: #fff;
     //box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.46);
     transition: all 0.3s ease;
@@ -40,17 +39,17 @@ button.btn {
 
   &.btn--style-three {
     background-image: none;
-    background-color: #4b382c;
+    background-color: #4b8ea8;
     color: #fff;
-    border-color: #06b7d7;
+    border-color: #fff;
+    font-weight: 400 !important;
     //box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.36);
 
     @include font-size(16px, 16px, 14px, 14px, 14px);
 
     &:hover,
     &:focus {
-      background-color: lighten(#4b382c, 10%);
-      //box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.d46);
+      background-color: darken(#4b8ea8, 10%);
     }
   }
 
