--- a/src/scss/organisms/_marquee.scss
+++ b/src/scss/organisms/_marquee.scss
@@ -1,128 +1,123 @@
 #slider {
-  height: 36.45833vw !important;
-
-  .swiper-slide {
-    > img {
-      width: 100%;
-    }
-
-    .container {
-      height: 100%;
-    }
-
-    .row {
-      transform: translateY(-50%);
-      top: 50%;
-      position: relative;
-    }
+  .slider-caption {
+    top: auto !important;
+    bottom: 40px;
+    left: 40px;
+    max-width: none;
   }
 
   .slide1 {
-    display: flex;
-    align-content: center;
-
     .slide__title {
-      color: #4b382c;
-      font-family: $ff-dancing;
-      line-height: 0.8;
+      color: #5f5f5e;
       font-weight: 400;
-      margin-bottom: 0;
-      text-align: left;
+      margin-bottom: 10px;
 
-      @include font-size(90px, 70px);
-
-      &-family {
-        padding-left: 25px;
-        color: #0491ab;
-        font-family: $ff-lato;
-        font-weight: 900;
-
-        @include font-size(77px, 56px);
-      }
+      @include font-size(68px, 50px, 68px);
     }
 
     .slide__copy {
-      color: #4b382c;
-      line-height: 1;
-      font-family: $ff-lato;
-      text-transform: uppercase;
+      font-family: $ff-merri;
+      color: #528fa8;
+      margin-bottom: 10px;
 
-      @include font-size(25px, 23px, 20px, 20px, 18px);
+      @include font-size(36px, 22px, 32px);
+    }
+
+    .btn {
+      float: right;
     }
   }
 
   .slide2 {
-    font-family: $ff-lato;
-
     .slide__title {
-      font-weight: 400 !important;
-      color: #4b382c;
-      margin-bottom: 0;
+      color: #5f5f5e;
+      font-weight: 700;
+      margin-bottom: 5px;
       line-height: 1;
-      text-transform: uppercase;
 
-      @include font-size(35px, 30px);
+      @include font-size(70px, 50px, 68px);
+
+      &--sub {
+        color: #5f5f5e;
+        font-weight: 400;
+
+        @include font-size(34px, 27px, 34px);
+      }
     }
 
-    .stars {
-      padding-top: 20px;
-      padding-bottom: 25px;
+    .slide__copy {
+      font-family: $ff-merri;
+      color: #528fa8;
+      margin-bottom: 10px;
+
+      @include font-size(27px, 19px, 24px);
     }
 
-    .copy {
-      color: #454545;
-      margin-bottom: 25px;
-      padding-right: 45px;
-      line-height: 1.4;
-
-      @include font-size(28px, 25px, 20px, 18px, 17px);
+    .btn {
+      float: right;
     }
   }
 
   .slide3 {
-    .title--no-insure {
-      font-weight: 400;
-      color: #06b7d7;
+    .wrapper {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-end;
       margin-bottom: 5px;
-      line-height: 1;
-      font-family: $ff-dancing;
-
-      @include font-size(120px, 110px, 55px);
     }
 
-    .title--sub {
-      text-transform: uppercase;
-      letter-spacing: 1.7px;
-      color: #4b382c;
+    .slide__title {
+      color: #5f5f5e;
+      font-weight: 700;
       line-height: 1;
+      margin-bottom: 0;
+      margin-right: 20px;
+
+      @include font-size(70px, 50px, 68px);
+
+      &--sub {
+        color: #5f5f5e;
+        font-weight: 400;
+
+        @include font-size(34px, 27px, 34px);
+      }
+    }
+
+    .slide__copy {
+      color: #696968;
+      line-height: 1.3;
       margin-bottom: 10px;
 
-      @include font-size(33px, 25px, 32px);
-    }
-
-    .preventative-copy {
-      color: #303030;
-      line-height: 1;
-      padding-top: 10px;
-
-      @include font-size(37px, 31px);
+      @include font-size(27px, 19px, 24px);
     }
 
     .btn {
-      @include lr-padding(80px, 60px, 60px);
+      float: right;
+      margin-top: -20px;
+      margin-right: 15px;
+      margin-left: 15px;
+    }
+
+    @media (max-width: 1199px) {
+      img {
+        max-height: 48px;
+      }
     }
   }
 
-  .icon-star3 {
-    color: $c-star;
+  .swiper-button-prev,
+  .swiper-button-next {
+    background-image: none;
+    width: auto;
+    height: auto;
   }
 
-  .slide-content {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .swiper-button-prev {
+    left: -10px;
+  }
+
+  .swiper-button-next {
     right: 0;
-    bottom: 0;
   }
 }
 
