--- a/src/templates/atoms/hours-table.twig
+++ b/src/templates/atoms/hours-table.twig
@@ -1,29 +1,25 @@
 <div class="hours-table">
-    <h5>OFFICE HOURS</h5>
-    {#<table >#}
-        {#<tbody>#}
-        {#<tr>#}
-            {#<th class="t400">Mon</th>#}
-            {#<td>8:00am - 6:00pm</td>#}
-        {#</tr>#}
-        {#<tr>#}
-            {#<th class="t400">Tues</th>#}
-            {#<td>7:00am - 3:00pm</td>#}
-        {#</tr>#}
-        {#<tr>#}
-            {#<th class="t400">Wed</th>#}
-            {#<td>8:00am - 6:00pm</td>#}
-        {#</tr>#}
-        {#<tr>#}
-            {#<th class="t400">Thurs</th>#}
-            {#<td>7:00am - 3:00pm</td>#}
-        {#</tr>#}
-        {#<tr>#}
-            {#<th class="t400">Closed</th>#}
-            {#<td>Friday - Sunday</td>#}
-        {#</tr>#}
-        {#</tbody>#}
-    {#</table>#}
-    <p>Mon-Thu   7:30am - 4:30pm</p>
-    <p>Fri  Closed</p>
+    <h5>Office Hours:</h5>
+    <div class="hours-wrapper">
+        <p>Mon</p>
+        <p>8:00am - 5:00pm*</p>
+    </div>
+    <div class="hours-wrapper">
+        <p>Tues</p>
+        <p>8:00am - 4:00pm**</p>
+    </div>
+    <div class="hours-wrapper">
+        <p>Wed</p>
+        <p>8:00am - 5:00pm</p>
+    </div>
+    <div class="hours-wrapper">
+        <p>Thurs</p>
+        <p>8:00am - 4:00pm**</p>
+    </div>
+    <div class="hours-wrapper">
+        <p>Friday</p>
+        <p>7:00am - 4:00pm*</p>
+    </div>
+    <p class="sub-text">*closed every other week</p>
+    <p class="sub-text">**extended hours available, call for details</p>
 </div>
