--- a/src/templates/organisms/forms.twig
+++ b/src/templates/organisms/forms.twig
@@ -1,11 +1,21 @@
-<section id="section-forms">
-    <div class="container center">
-        <div class="heading">
-            <h2 class="heading__title">New Patient Forms</h2>
+<section id="section-forms" class="parallax">
+    <div class="heading container">
+        <div class="row">
+            <div class="col-sm-10 col-sm-push-1">
+                <h2 class="heading__title">New Patient Forms</h2>
+                <p class="heading__copy">Click here if you have already scheduled your new patient exam and need to
+                    provide our practice with your health history information.</p>
+            </div>
         </div>
-        <p class="forms__copy">Click here if you have already scheduled your new patient exam and need to provide our practice with your health history information.</p>
-        <div class="forms__btn-wrapper">
-            <a href="https://ssl.tysonsteele.com/lorismithdds/questionnaire/form" target="_blank" class="btn btn--style-three">Enter Health History</a>
+    </div>
+    <div class="forms container">
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="https://www.ident.ws/template_include/new_patient_sign_in.do?site=16776&practiceId=52169" class="btn btn--style-three" target="_blank">New Patient Login</a>
+            </div>
+            <div class="col-sm-6">
+                <a href="https://www.ident.ws/template_include/pi_login.jsp?site=16776&practiceId=52169&page=Patient+Information" class="btn btn--style-three" target="_blank">Existing Patient Login</a>
+            </div>
         </div>
     </div>
 </section>
