--- a/src/templates/organisms/marquee.twig
+++ b/src/templates/organisms/marquee.twig
@@ -2,55 +2,55 @@
 ============================================= -->
 <div id="mobile-background" class="hidden-md hidden-lg">
     <a href="#" data-scrollto="#section-specials" data-offset="0">
-        <img src="assets/smith-mobile-slide.jpg" style="width:100%;height:auto;" alt="{{ doctorName }}">
+        <img src="assets/slides/slide-mobile.jpg" style="width:100%;height:auto;" alt="{{ title }}">
     </a>
 </div>
 
 <!-- Slider
 ============================================= -->
-<section id="slider" class="hidden-xxs hidden-xs hidden-sm slider-parallax swiper_wrapper clearfix">
-    <div class="swiper-container swiper-parent">
+<section id="slider" class="hidden-xxs hidden-xs hidden-sm slider-parallax swiper_wrapper full-screen clearfix customjs">
+    <div class="swiper-container swiper-parent customjs">
         <div class="swiper-wrapper">
 
             <!-- Slide
             ============================================= -->
-             <div class="swiper-slide slide1" style="background: url('assets/slide1-bg.jpg') 50% 50% no-repeat; background-size: cover;">
-                <div class="container clearfix">
-                    <div class="slider-caption slider-caption-left">
-                        <h1 class="slide__title">The&nbsp;Right&nbsp;Dentist</h1>
-                        <h1 class="slide__title-family">For&nbsp;Your&nbsp;Family</h1>
-                        <h4 class="slide__copy">Now Welcoming New Patients</h4>
-                        <a href="#" class="btn" data-scrollto="#section-specials" data-offset="80">New Patient Offers</a>
-                    </div>
+             <div class="swiper-slide slide1" style="background: url('assets/slides/slide1.jpg') 50% 50% no-repeat; background-size: cover;">
+                <div class="slider-caption">
+                    <h1 class="slide__title">Dentistry&nbsp;for <strong>Today’s&nbsp;Family</strong></h1>
+                    <a href="#" class="btn btn--style-two" data-scrollto="#section-specials" data-offset="0">New Patient Offers</a>
+                    <h4 class="slide__copy">Now Welcoming New Patients!</h4>
                 </div>
-            </div> 
+            </div>
 
             <!-- Slide
             ============================================= -->
-             <div class="swiper-slide slide2" style="background: url('assets/slide2-bg.jpg') 50% 50% no-repeat; background-size: cover;"> 
-                <div class="container clearfix">
-                    <div class="slider-caption slider-caption-left text-left">
-                        <h2 class="slide__title">Read what our<br>Patients&nbsp;are&nbsp;Saying</h2>
-                        <img src="assets/slide-stars.png" alt="Five Stars" class="stars">
-                        <h5 class="copy">“Wonderful professional care, great people, latest technology with the knowledge to make your dental&nbsp;experience unique.” - Jimmie</h5>
-                        <a href="#" class="btn" data-offset="80" data-scrollto="#section-reviews">READ MORE REVIEWS</a>
-                    </div>
-                </div>  
-            </div>   
+            <div class="swiper-slide slide2" style="background: url('assets/slides/slide2.jpg') 50% 50% no-repeat; background-size: cover;">
+                <div class="slider-caption">
+                    <h1 class="slide__title">No Insurance? <span class="slide__title--sub">Our patients don’t need it!</span></h1>
+                    <a href="#" class="btn btn--style-two" data-scrollto="#section-insurance" data-offset="0">Learn More</a>
+                    <h4 class="slide__copy">Get your preventive care for a low monthly fee.</h4>
+                </div>
+            </div>
 
             <!-- Slide
             ============================================= -->
-             <div class="swiper-slide slide3" style="background: url('assets/slide3-bg.jpg') 50% 50% no-repeat; background-size: cover;">
-                <div class="container clearfix slide-content">
-                    <div class="slider-caption slider-caption-left text-left">
-                        <h2 class="title--no-insure">No Insurance?</h2>
-                        <h3 class="title--sub">Our Patients Don’t Need It!</h3>
-                        <h3 class="preventative-copy">Get your preventive care for<br>a low monthly fee</h3>
-                        <a href="#" class="btn" data-offset="80" data-scrollto="#section-insurance">Learn more</a> 
+            <div class="swiper-slide slide3" style="background: url('assets/slides/slide3.jpg') 50% 50% no-repeat; background-size: cover;">
+                <div class="slider-caption">
+                    <div class="wrapper">
+                        <h1 class="slide__title">Excellent</h1><img src="/assets/slides/slide-stars.png" alt="Five Stars">
                     </div>
+                    <h4 class="slide__copy">“Creekwood Dental is the best dentist office I have <br>ever been to! -Autumn C.</h4>
+                    <a href="#" class="btn btn--style-two" data-scrollto="#section-reviews" data-offset="0">READ MORE REVIEWS</a>
                 </div>
-            </div> 
+            </div>
 
+        </div>
+
+        <div class="swiper-button-prev">
+            <img src="assets/slides/slide-left.png" alt="Previous Slide">
+        </div>
+        <div class="swiper-button-next">
+            <img src="assets/slides/slide-right.png" alt="Next Slide">
         </div>
     </div>
 </section>
