--- a/src/scss/molecules/__slab__care-credit.scss
+++ b/src/scss/molecules/__slab__care-credit.scss
@@ -1,5 +1,5 @@
 .section-care-credit-slab {
-  background-color: #ddf2fe;
+  background-color: #fff;
   padding: 30px 0;
 
   .container {
@@ -9,12 +9,12 @@
   }
 
   .text {
-    color: #585756;
-    font-family: $ff-lato;
+    color: #282828;
+    font-family: $ff-open;
     margin-bottom: 0;
     padding-right: 25px;
     // letter-spacing: 1px;
 
-    @include font-size(24px, 23px, 23px, 19px, 16px);
+    @include font-size(18px, 17px, 16px, 17px, 16px);
   }
 }
