--- a/src/scss/organisms/_forms.scss
+++ b/src/scss/organisms/_forms.scss
@@ -1,80 +1,36 @@
 #section-forms {
-  background-image: url('/assets/blue-pattern-bg.svg');
-  background-size: 100px !important;
-  background-repeat: repeat;
-  padding-top: 45px;
-  border-top: solid 2px #fff;
-  border-bottom: solid 2px #fff;
+  background-image: url(/assets/forms-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top right;
+  padding: 30px 0 45px;
 
   .heading {
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 15px;
 
     &__title {
-      font-weight: 700px;
-      color: #4b382c;
+      color: #fff;
       line-height: 1;
-      padding-bottom: 0;
-      padding-top: 10px;
-      margin-bottom: 0;
-    }
-  }
-
-  .container {
-    padding-bottom: 30px;
-  }
-
-  .forms {
-    &__byline {
-      color: #424242;
-      font-size: 18px;
-      padding-bottom: 15px;
+      margin-bottom: 10px;
     }
 
     &__copy {
-      color: #3e3e3e;
-
-      &a:hover {
-        color: #3e3e3e;
-      }
-    }
-
-    &__btn-wrapper {
-      padding-bottom: 30px;
+      color: #fff;
+      line-height: 1.3;
+      margin-bottom: 30px;
     }
   }
 
-  .btn {
-    margin: 10px 0;
-    padding: 10px 20px;
-    width: 270px;
-  }
-
-  .line-break {
-    display: none;
-  }
-
-  @media (min-width: 768px) {
+  .forms {
     .btn {
-      width: 360px;
-      margin-left: 15px;
-      margin-right: 15px;
+      width: 100%;
+      margin-bottom: 20px;
     }
 
-    .forms__btn-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .line-break {
-      display: inline-block;
-      height: 54px;
-      width: 1px;
-      background: #1a202a;
-      line-height: 0;
-      margin-bottom: 0;
+    @media (min-width: 768px) {
+      .col-sm-6 {
+        padding: 0 30px;
+      }
     }
   }
 }
