--- a/src/templates/atoms/down-arrow.twig
+++ b/src/templates/atoms/down-arrow.twig
@@ -1,5 +1,5 @@
 <div class="down-arrow__wrapper hidden-xs hidden-sm">
-    <a href="#" data-scrollto="#cta-one" data-offset="80">
+    <a href="#" data-scrollto="#section-about" data-offset="0">
         <img src="/assets/down-arrow.png" class="infinite animated fadeInDown down-arrow--img" alt="down arrow">
         {#<i class="icon-chevron-down infinite animated fadeInDown down-arrow--icon"></i>#}
     </a>
