--- a/src/templates/molecules/location-card__simple.twig
+++ b/src/templates/molecules/location-card__simple.twig
@@ -5,20 +5,24 @@
     {#</div>#}
 
     <div class="location-card__logo--wrapper">
-        <img  src="assets/smith-lori-logo-bottom.png" alt="{{ mainDoctor }}" class="location-card__logo">
+        <img  src="assets/logo.svg" alt="{{ mainDoctor }}" class="location-card__logo">
     </div>
 
     <div class="location-card__content">
 
-        <h6 class="location-card__doctor">Lori Smith, <span class="location-card__doctor--title">DDS</span></h6>
+        <h6 class="location-card__doctor">Paul B. Smith, <span class="location-card__doctor--title">DDS</span></h6>
 
         {#<p class="location-card__doctor-sub">GENERAL & COSMETIC DENTIST</p>#}
 
-        <p class="location-card__address">13 South Coo-Y-Yah<br>Pryor OK 74361</p>
+        <p class="location-card__address center">2815 W Lake Houston Pkwy
+            <br>Suite 110
+            <br>Kingwood, TX 77339</p>
 
         <a href="{{ googleMap }}" target="_blank" class="link-no-style ">
-            <h6 class="location-card__map-link underline">Click to view map & directions</h6>
+            <h6 class="location-card__map-link underline">Click for map & directions</h6>
         </a>
+
+        {% include 'atoms/hours-table.twig' %}
 
         {#<h5 class="location-card__welcoming-patients">Now Welcoming New Patients</h5>#}
         <p class="location-card__new-patient-text">New Patient Hotline</p>
@@ -28,9 +32,9 @@
         </p>
 
         {% include 'atoms/request-appointment-button.twig' with {
-            classes: "btn--style-two location-card__btn"
+            classes: "location-card__btn"
         } %}
 
-        {% include 'atoms/hours-table.twig' %}
+        {% include 'molecules/social-media-links.twig' %}
     </div> 
 </div>
