--- a/src/templates/organisms/request-modal.twig
+++ b/src/templates/organisms/request-modal.twig
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="center">
-                            <button type="submit" class="btn form-btn">Request Appointment</button>
+                            <button type="submit" class="btn">Request Appointment</button>
                         </div>
                     </form>
                 </div>
