--- a/src/templates/organisms/services.twig
+++ b/src/templates/organisms/services.twig
@@ -1,60 +1,31 @@
 <section id="section-services">
-
-    <div class="heading">
-        <div class="container">
-            <h2 class="heading__title">Our Services</h2>
-            {#<h4 class="heading__byline">Learn more about our treatments and services.</h4>#}
-            <p class="heading__copy">By actively preventing disease and decay through regular home care, professional
-                dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile.
-                Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please
-                give us a call&nbsp;or&nbsp;<a href="#" data-target="#requestAppointmentForm" data-toggle="modal">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment.</a></p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="service col-sm-6">
+                <img src="/assets/services/smile-makeovers.jpg" alt="Smile makeovers" class="hidden-xs service__image">
+            </div>
+            <div class="service service--text-block col-sm-6">
+                <h3 class="service__title">Smile Makeovers</h3>
+                <img src="/assets/services/smile-makeovers.jpg" alt="Smile makeovers" class="hidden-sm hidden-md hidden-lg service__image--mobile">
+                <p class="service__copy">Cosmetic dentistry is one of the most cost-effective ways to improve your
+                    appearance. A beautiful, bright, healthy smile will increase self-confidence and overall life
+                    satisfaction. Cosmetic dentistry includes things like tooth-colored restorations, dental implants,
+                    and crowns. We have many options, so please call us today!</p>
+            </div>
         </div>
     </div>
-
-    {% include 'molecules/services__carousel.twig' %}
-
-    <div class="services-part-two">
-        <div class="heading">
-            <div class="container">
-                <h2 class="heading__title">More Services</h2>
-                <p class="heading__copy">Select a link below to learn more.</p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="service service--text-block col-sm-6">
+                <h3 class="service__title">Orthodontics</h3>
+                <img src="/assets/services/orthodontics.jpg" alt="Orthodontics" class="hidden-sm hidden-md hidden-lg service__image--mobile">
+                <p class="service__copy">A beautifully-aligned natural smile can be obtained both with traditional metal
+                    braces and other more subtle options like Invisalign® "invisible" orthodontics. Please contact us
+                    today for a free orthodontic consultation!​</p>
+            </div>
+            <div class="service col-sm-6">
+                <img src="/assets/services/orthodontics.jpg" alt="Orthodontics" class="hidden-xs service__image">
             </div>
         </div>
-
-        <div class="services-second-carousel full-width-wrapper hidden-xs">
-            <div class="container full-width">
-                <div class="owl-carousel js-services-carousel--two">
-                    {% for service in services %}
-                        <div class="services-carousel__item">
-                            <a href="#" data-toggle="modal" data-target="#modal--{{ service.modalTarget }}"><div class="services-carousel--image"><img src="assets/services/{{ service.image }}" alt="Service Image"></div></a>
-                            <div class="services-carousel__title">
-                                <a href="#" data-toggle="modal" data-target="#modal--{{ service.modalTarget }}"><h5>{{ service.title }}</h5></a>
-                                <a href="#" data-toggle="modal" data-target="#modal--{{ service.modalTarget }}"><h6>Learn More</h6></a>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-
-        <div class="services-second-carousel--mobile full-width-wrapper hidden-sm hidden-md hidden-lg">
-            <div class="container full-width">
-                <div class="owl-carousel js-services-carousel--two-mobile">
-                    {% for service in services if not service.featured %}
-                        <div class="services-carousel__item">
-                            <a href="#" data-toggle="modal" data-target="#modal--{{ service.modalTarget }}"><div class="services-carousel--image"><img src="assets/services/{{ service.image }}" alt="Service Image"></div></a>
-                            <div class="services-carousel__title">
-                                <a href="#" data-toggle="modal" data-target="#modal--{{ service.modalTarget }}"><h5>{{ service.title }}</h5></a>
-                                <a href="#" data-toggle="modal" data-target="#modal--{{ service.modalTarget }}"><h6>Learn More</h6></a>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-
     </div>
-
-    {% include 'molecules/services__modals.twig' %}
-
 </section>
