--- a/src/templates/organisms/forms.twig
+++ b/src/templates/organisms/forms.twig
@@ -1,7 +1,7 @@
 <section id="section-forms" class="parallax">
     <div class="heading container">
         <div class="row">
-            <div class="col-sm-10 col-sm-push-1">
+            <div class="col-lg-10 col-lg-push-1">
                 <h2 class="heading__title">New Patient Forms</h2>
                 <p class="heading__copy">Click here if you have already scheduled your new patient exam and need to
                     provide our practice with your health history information.</p>
@@ -10,11 +10,13 @@
     </div>
     <div class="forms container">
         <div class="row">
-            <div class="col-sm-6">
-                <a href="https://www.ident.ws/template_include/new_patient_sign_in.do?site=16776&practiceId=52169" class="btn btn--style-three" target="_blank">New Patient Login</a>
-            </div>
-            <div class="col-sm-6">
-                <a href="https://www.ident.ws/template_include/pi_login.jsp?site=16776&practiceId=52169&page=Patient+Information" class="btn btn--style-three" target="_blank">Existing Patient Login</a>
+            <div class="col-lg-10 col-lg-push-1">
+                <div class="col-lg-6 center">
+                    <a href="https://www.ident.ws/template_include/new_patient_sign_in.do?site=16776&practiceId=52169" class="btn btn--style-three" target="_blank">New Patient Login</a>
+                </div>
+                <div class="col-lg-6 center">
+                    <a href="https://www.ident.ws/template_include/pi_login.jsp?site=16776&practiceId=52169&page=Patient+Information" class="btn btn--style-three" target="_blank">Existing Patient Login</a>
+                </div>
             </div>
         </div>
     </div>
