--- a/src/templates/organisms/head.twig
+++ b/src/templates/organisms/head.twig
@@ -7,7 +7,10 @@
     <title>{{ title }}</title>
     <meta name="description" content="{{ description }}"/>
     <meta name="keywords" content="{{ keywords }}" />
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lato:400,700|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
