--- a/src/templates/organisms/insurance.twig
+++ b/src/templates/organisms/insurance.twig
@@ -11,7 +11,7 @@
                     <p class="insurance__copy insurance__copy--last">Save money on your treatment.</p>
                 </div>
             </div>
-            <a class="btn" href="{{ insuranceLink }}" target="_blank">Learn More</a>
+            <a class="btn btn--style-two" href="{{ insuranceLink }}" target="_blank">Learn More</a>
         </div>
     </div>
     <img src="/assets/insurance.jpg" alt="{{ mainDoctor }}'s happy patients" class="insurance__image">
