--- a/src/scss/organisms/_services.scss
+++ b/src/scss/organisms/_services.scss
@@ -24,7 +24,7 @@
     &__title {
       color: #5f5f5e;
       line-height: 1;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       padding: 0 30px;
     }
 
@@ -48,6 +48,42 @@
     &__image {
       &--mobile {
         padding: 10px 45px;
+      }
+    }
+  }
+
+  .carousel {
+    background-color: #faf6ed;
+    padding: 30px 0;
+
+    .heading {
+      &__title {
+        color: #5f5f5e;
+        line-height: 1;
+        margin-bottom: 10px;
+      }
+
+      &__copy {
+        color: #5f5f5e;
+        line-height: 1.5;
+        margin-bottom: 20px;
+      }
+    }
+
+    .card {
+      &__title {
+        color: #72afc8;
+        font-family: $ff-merri;
+        padding-top: 15px;
+        margin-bottom: 10px;
+
+        @include font-size(16px, 16px, 14px, 14px, 14px);
+      }
+
+      &__sub {
+        color: #5f5f5e;
+        text-decoration: underline !important;
+        font-size: 14px;
       }
     }
   }
