--- a/src/templates/molecules/slab__care-credit.twig
+++ b/src/templates/molecules/slab__care-credit.twig
@@ -1,6 +1,6 @@
 <div class="section-care-credit-slab">
     <div class="container">
         <h6 class="text">Financing available from</h6>
-        <a href="https://www.carecredit.com/doctor-locator/General-Dentistry-in-PRYOR-OK-74361/Lori-Smith-DDS-Inc-PC/" target="_blank"><img src="/assets/care-credit-footer.png" alt="Care Credit"></a>
+        <a href="https://www.carecredit.com/doctor-locator/General-Dentistry-in-KINGWOOD-TX-77339/Creekwood-Dental-Inc/" target="_blank"><img src="/assets/care-credit.png" alt="Care Credit"></a>
     </div>
 </div>
