--- a/src/scss/organisms/_specials--three-card.scss
+++ b/src/scss/organisms/_specials--three-card.scss
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   padding-top: 30px;
   padding-bottom: 60px;
+  border-bottom: solid 5px #fff;
 
   .heading {
     padding-top: 10px;
@@ -14,6 +15,7 @@
       line-height: 1;
       color: #fff;
       font-weight: 400;
+      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
     }
 
     &__byline {
@@ -21,6 +23,7 @@
       font-weight: 700;
       line-height: 1;
       margin-bottom: 5px;
+      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
     }
 
     &__sub-title {
@@ -107,11 +110,15 @@
     }
 
     &__title {
-      font-family: $ff-lato;
+      font-family: $ff-open;
       color: #fff;
       font-weight: 700;
       line-height: 1.1;
       margin-bottom: 10px;
+
+      &::first-line {
+        font-weight: 400;
+      }
     }
 
     &__copy {
