--- a/src/templates/organisms/reviews.twig
+++ b/src/templates/organisms/reviews.twig
@@ -5,7 +5,7 @@
     {#<h4 class="heading__byline center">Real reviews from some of our patients.</h4>#}
 
     <div class="container">
-            <div id="bf-revz-widget-{{ birdeye }}" style="-webkit-overflow-scrolling:touch;">
+            <div id="bf-revz-widget-{{ birdeye }}" style="-webkit-overflow-scrolling:touch;" class="birdeye-widget">
             </div>
         <div class="row center">
             <div class="bf-dv"><span class="bf-spn">Reviews Powered by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span></div>
