--- a/src/templates/organisms/specials--three-card.twig
+++ b/src/templates/organisms/specials--three-card.twig
@@ -17,7 +17,7 @@
                 <div class="specials-card__bottom">
                     <p class="specials-card__savings">SAVE $157</p>
                     <p class="specials-card__copy">Includes comprehensive exam by the doctor and necessary x‑rays.</p>
-                    <p class="specials-card__codes">(D0150, D0330, D0274)</p>
+                    <p class="specials-card__codes">D0150, D0274)</p>
                 </div>
             </div>
 
@@ -30,7 +30,7 @@
                 <div class="specials-card__bottom">
                     <p class="specials-card__savings">SAVE $33</p>
                     <p class="specials-card__copy">Includes a professional dental cleaning. A new patient exam is required. Does not include periodontal&nbsp;therapy.</p>
-                    <p class="specials-card__codes">(D1110, D1208)</p>
+                    <p class="specials-card__codes">(D1110)</p>
                 </div>
             </div>
 
