--- a/src/templates/organisms/about.twig
+++ b/src/templates/organisms/about.twig
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-md-7 col-md-push-5">
                     {# this is content #}
-                    <h2 class="about__title">Meet the Team</h2>
+                    <h2 class="about__title">Meet the Doctor</h2>
                     <h4 class="about__doctor">Paul B. Smith, <span class="about__doctor--title">DDS</span></h4>
                     <p class="about__copy">By combining advanced dental technology with a gentle, friendly style, Dr.
                         Smith and his team will make you and your family more comfortable than you ever thought
