--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -13,8 +13,12 @@
     }
 
     @media (min-width: 992px) {
-      margin-top: 15px;
-      margin-bottom: 20px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+
+      img {
+        padding: 0;
+      }
     }
   }
 
@@ -32,7 +36,7 @@
       font-family: $ff-merri;
       font-weight: 400;
       color: #5f5f5e;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
 
       span {
         color: #5f5f5e;
@@ -46,6 +50,7 @@
 
         @media (min-width: 992px) {
           max-width: 190px;
+          padding-bottom: 5px;
         }
 
         a {
@@ -66,7 +71,7 @@
       font-family: $ff-open;
       color: #5f5f5e;
       font-weight: 400;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     .phone-number {
@@ -111,8 +116,12 @@
     width: 290px !important;
   }
 
-  .side-header #primary-menu ul li {
-    margin: 15px 0 0;
-    padding-bottom: 10px;
+  .side-header #primary-menu {
+    margin-bottom: 15px;
+
+    ul li {
+      margin: 10px 0 0;
+      padding-bottom: 10px;
+    }
   }
 }
