--- a/src/templates/organisms/header.twig
+++ b/src/templates/organisms/header.twig
@@ -22,7 +22,7 @@
                     <li><a href="#" data-href="#section-specials"><div>New Patient Offers</div></a></li>
                     <li><a href="#" data-href="#section-reviews"><div>Reviews</div></a></li>
                     <li><a href="#" data-href="#section-insurance"><div>No Insurance?</div></a></li>
-                    <li><a href="#" data-href="#section-about"><div>Meet the Doctor</div></a></li>
+                    <li><a href="#" data-href="#section-about"><div>Meet the Team</div></a></li>
                     <li><a href="#" data-href="#section-services"><div>Services</div></a></li>
                     <li><a href="#" data-href="#section-forms"><div>Forms</div></a></li>
                     <li><a href="#" data-href="#section-location"><div>Location</div></a></li>
